// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtpInputField /> should match hasError snapshot 1`] = `
<div>
  <div
    class="wrapper"
    data-testid="opt-input-field"
    id="opt-input-field"
  >
    <div
      class="inputs-wrapper error"
    >
      <div
        data-testid="opt-input-field-item-wrapper-0"
        id="opt-input-field-item-wrapper-0"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-0"
          id="opt-input-field-item-0"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-1"
        id="opt-input-field-item-wrapper-1"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-1"
          id="opt-input-field-item-1"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-2"
        id="opt-input-field-item-wrapper-2"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-2"
          id="opt-input-field-item-2"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-3"
        id="opt-input-field-item-wrapper-3"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-3"
          id="opt-input-field-item-3"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-4"
        id="opt-input-field-item-wrapper-4"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-4"
          id="opt-input-field-item-4"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-5"
        id="opt-input-field-item-wrapper-5"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-5"
          id="opt-input-field-item-5"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<OtpInputField /> should match snapshot 1`] = `
<div>
  <div
    class="wrapper"
    data-testid="opt-input-field"
    id="opt-input-field"
  >
    <div
      class="inputs-wrapper inputs-wrapper-enabled"
    >
      <div
        data-testid="opt-input-field-item-wrapper-0"
        id="opt-input-field-item-wrapper-0"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-0"
          id="opt-input-field-item-0"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-1"
        id="opt-input-field-item-wrapper-1"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-1"
          id="opt-input-field-item-1"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-2"
        id="opt-input-field-item-wrapper-2"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-2"
          id="opt-input-field-item-2"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-3"
        id="opt-input-field-item-wrapper-3"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-3"
          id="opt-input-field-item-3"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-4"
        id="opt-input-field-item-wrapper-4"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-4"
          id="opt-input-field-item-4"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
      <div
        data-testid="opt-input-field-item-wrapper-5"
        id="opt-input-field-item-wrapper-5"
      >
        <input
          autocomplete="off"
          class="default"
          data-testid="opt-input-field-item-5"
          id="opt-input-field-item-5"
          maxlength="1"
          placeholder="-"
          type="tel"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
